fixed "popups too wide"

--- a/src/scss/inc/_layout.scss
+++ b/src/scss/inc/_layout.scss
@@ -24,15 +24,20 @@ $gameWidth: 1280;
     }
 }
 
-
 [data-ui="menu"] {
     .pane {
-        position: absolute;
-        top: 0;
-        right: -10000px;
+        display: none;
     }
 }
 
+.pz-mobile {
+    [data-ui="menu"] {
+        display: flex;
+        align-items: center;
+        height: 100%;
+        padding: 0 6px;
+    }
+}
 
 [data-sba-submenu="true"] {
     overflow-y: hidden;
@@ -40,6 +45,13 @@ $gameWidth: 1280;
         position: relative;
         left: -167px;
         top: -175px;
+    }
+    .pz-mobile-dropdown {
+        &.show {
+            .pz-dropdown__list {
+                display: none;
+            }
+        }
     }
 
     .pz-game-toolbar {
@@ -49,25 +61,25 @@ $gameWidth: 1280;
 
     [data-ui="menu"] {
         .pane {
+            display: block;
+            position: absolute;
             right: -16px;
-            top: 49px;
+            top: 45px;
         }
     }
 
     .sba {
-        left: -163px;
-        top: 0;
+        left: -167px;
+        top: 0px;
     }
 
     &.pz-desktop {
-
         .pane {
             right: -16px;
             top: 55px;
         }
     }
 }
-
 
 [data-sba-active="true"] {
     --sba-app-width: 100px;
@@ -116,7 +128,7 @@ $gameWidth: 1280;
     }
 
     .sb-controls-box {
-        max-width: calc(100vw - var(--sba-app-width))
+        max-width: calc(100vw - var(--sba-app-width));
     }
 }
 
@@ -144,7 +156,7 @@ $gameWidth: 1280;
     [data-ui="grid"] {
         table {
             table-layout: auto;
-    
+
             &.sba-data-pane {
                 tbody {
                     th {
@@ -158,7 +170,7 @@ $gameWidth: 1280;
                         }
                     }
                 }
-    
+
                 :is(thead, tbody) {
                     tr {
                         :is(th, td) {
@@ -168,12 +180,11 @@ $gameWidth: 1280;
                     }
                 }
             }
-        } 
+        }
     }
 }
 
 //end if app
-
 
 [data-sba-active] {
     .pz-game-toolbar {
@@ -185,8 +196,7 @@ $gameWidth: 1280;
 
 @media (min-width: 516px) {
     [data-sba-active] {
-
-        // avoid break between yest. and assistant 
+        // avoid break between yest. and assistant
         .pz-game-toolbar {
             .pz-row {
                 padding: 0 12px;
@@ -205,7 +215,6 @@ $gameWidth: 1280;
         $w1stCol: 100 - ($wCols * 3);
 
         .sba-data-pane {
-
             tbody {
                 th {
                     text-transform: none;
@@ -218,19 +227,17 @@ $gameWidth: 1280;
 
                 tr {
                     &:nth-child(1) {
-
                         th {
                             &::after {
-                                content: 'ords'
+                                content: "ords";
                             }
                         }
                     }
 
                     &:nth-child(2) {
-
                         th {
                             &::after {
-                                content: 'oints'
+                                content: "oints";
                             }
                         }
                     }
@@ -246,7 +253,6 @@ $gameWidth: 1280;
                     }
                 }
             }
-
         }
     }
 
@@ -265,7 +271,6 @@ $gameWidth: 1280;
 }
 
 @media (min-width: 900px) {
-
     [data-sba-submenu="true"] {
         &.pz-desktop {
             [data-ui="menu"] {
@@ -278,7 +283,6 @@ $gameWidth: 1280;
     }
 
     [data-sba-active="true"] {
-
         --sba-app-width: 160px;
         --sba-app-padding: 0 8px 8px;
         --sba-app-margin: 66px 0 0 0;
@@ -326,10 +330,8 @@ $gameWidth: 1280;
     }
 }
 
-
 // result list on the right
 @media (min-width: 768px) {
-
     [data-sba-theme] {
         &.pz-page {
             .sba-pop-up {
